--- a/platformio.ini
+++ b/platformio.ini
@@ -20,12 +20,12 @@ lib_deps =
     https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-; extra_scripts = upload.py
-; upload_protocol = custom
+extra_scripts = upload.py
+upload_protocol = custom
 ; upload_protocol = espota
-; custom_upload_url = http://192.168.178.141/update
-; upload_port = 192.168.178.141
-;upload_port=COM4
+custom_upload_url = http://10.31.31.29/update
+upload_port = 10.31.31.29
+; upload_port= COM4
 [env:nodemcuv2]
 board = nodemcuv2
 platform = espressif8266
