modified:   platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ extra_scripts = upload.py
 upload_protocol = custom
 ; upload_protocol = espota
 custom_upload_url = http://10.31.31.29/update
-upload_port = 10.31.31.29
+; upload_port = 10.31.31.29
 ; upload_port= COM4
 [env:nodemcuv2]
 board = nodemcuv2
